--- a/net.adamec.ui.AppSwitcherBar/appsettings.json
+++ b/net.adamec.ui.AppSwitcherBar/appsettings.json
@@ -8,17 +8,17 @@
     "AppBarDockedWidth": 160,
     "AppBarDockedHeight": 50,
     "AppBarMinWidth": 160,
-    "AppBarMinHeight": 50,
+    "AppBarMinHeight": 30,
 
     "AppBarResizeRedrawOnDrag": true,
 
-    "AppBarButtonWidth": 150,
+    "AppBarButtonWidth": 200,
     "AppBarButtonMinWidthRatio": 0.5,
-    "AppBarButtonHeight": 26,
-    "AppBarButtonMargin": 2,
+    "AppBarButtonHeight": 22,
+    "AppBarButtonMargin": 1,
 
     "AllowAppBarButtonReorder": true,
-    "ShowPinnedApps": true,
+    "ShowPinnedApps": false,
     "HideSingleWindowApps": false,
 
     "AppBarThumbnailWidth": 200,
